--- a/bracket/src/Body/Body.css
+++ b/bracket/src/Body/Body.css
@@ -9,8 +9,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 150px;
+
+}
+.winner {
+    margin: 0px;
+    padding: 0px;
 
 }
 
@@ -18,7 +23,8 @@
     border: 2px solid black;
     width: 100%;
     height: 20px;
-    margin: 20px;
+  
+   
 }
 
 .row1 {
