--- a/bracket/src/Body/Body.css
+++ b/bracket/src/Body/Body.css
@@ -2,33 +2,69 @@
     display:flex ;
     justify-content: center;
     align-items: center;
+    height:calc(100vh -75px);
 
 }
 .box {
-    border: 10px solid black;
+    border: 5px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 150px;
+
+}
+.box1 {
+    border: 5px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 280px;
+
+}
+.box2 {
+    border: 5px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 100px;
 
 }
 .winner {
     margin: 0px;
-    padding: 0px;
+    padding: px;
+    font-size: 20px;
+    width: 130px;
+    border-radius: 5px;
 
 }
 
 .positions {
     border: 2px solid black;
     width: 100%;
-    height: 20px;
+    height: 40px;
+    margin-bottom: 0px;
+    font-size: 30px;
+    background: rgb(181, 181, 181);
   
    
 }
+.space {
+
+    height: 15px;
+    width:100%;
+}
+.space1 {
+    height: 100px;
+    width:100%;
+
+}
+
 
 .row1 {
-    border: 10px solid black;
+    border: 1px solid black;
     width: 25%;
     height: 100vh;
     display: flex;
@@ -38,34 +74,13 @@
    
 }
 
-.box2 {
-    border: 10px solid black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    height: 300px;
 
-}
-.row2 {
-    border: 10px solid black;
-    width: 25%;
-    height: 100vh;
-    display: flex;
-   flex-direction: column;
-    justify-content: space-around;
 
-}
 
-.row3 {
-    border: 10px solid black;
-    width: 25%;
-    height: 100vh;
 
-}
 
 .row4 {
-    border: 10px solid black;
+    border: 1px solid black;
     width: 25%;
     height: 100vh;
 
