--- a/bracket/src/App.css
+++ b/bracket/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
-  
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-image: url("background.jpg");
+  background-size: cover;
  
 }
+
+
 
