--- a/bracket/src/Header/Header.css
+++ b/bracket/src/Header/Header.css
@@ -4,6 +4,7 @@
     height: 75px;
     padding: 0px;
     margin: 0px;
+    background: rgba(47, 69, 80, 0.6);
 }
 
 .title {
@@ -18,3 +19,10 @@
     justify-content: center;
 
 }
+
+.headButtons {
+        height: 20px;
+
+}
+
+
