Finished and Presented

--- a/bracket/src/App.css
+++ b/bracket/src/App.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   background-image: url("background.jpg");
   background-size: cover;
+  background-attachment: fixed;
  
 }
 
