--- a/bracket/src/Body/Body.css
+++ b/bracket/src/Body/Body.css
@@ -10,6 +10,9 @@
 input:focus {
   outline: none;
 }
+button:focus {
+  outline: none;
+}
 
 .box {
   border: 5px solid black;
@@ -20,7 +23,7 @@ input:focus {
   align-items: center;
   justify-content: space-between;
   height: 20%;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.3);
 }
 .box1 {
   border: 5px solid black;
@@ -31,7 +34,7 @@ input:focus {
   align-items: center;
   justify-content: space-between;
   height: 30%;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.3);
 }
 .box2 {
   border: 5px solid black;
@@ -42,26 +45,32 @@ input:focus {
   align-items: center;
   justify-content: space-between;
   height: 15%;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.3);
 }
-.winner {
-  margin: 0px;
-  padding: px;
-  font-size: 20px;
-  width: 130px;
-  border-radius: 5px;
-  border: 1px solid rgb(252, 131, 131);
+.box3 {
+  border: 5px solid black;
+  display: flex;
+  margin: 5px;
+  padding: 4px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 8%;
+  background: rgba(255, 255, 255, 0.3);
 }
+
 
 .positions {
   border: 2px solid black;
   width: 100%;
-  height: 40px;
+  height: 30px;
   margin-bottom: 0px;
-  font-size: 30px;
-
+  font-size: calc(1em + .5vw);
+  font-family: 'Courier New', Courier, monospace;
   background: rgb(118, 156, 176);
-  opacity: 1;
+  
+  
+ 
 }
 .space {
   height: 20px;
@@ -91,11 +100,14 @@ input:focus {
 }
 
 .winner {
+  
+  font-size: 20px;
+  border-radius: 5px;
+  border: 1px solid rgb(252, 131, 131);
   position: relative;
   background-color: rgb(176, 176, 176);
   border: 1px solid black;
   font-size: 1.5vw;
-  vertical-align: middle;
   color: #ffffff;
   padding: 0px;
   margin: 1px;
@@ -103,7 +115,6 @@ input:focus {
   text-align: center;
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
-  text-decoration: none;
   overflow: hidden;
   cursor: pointer;
 }
